Bug 433994 - Password field loses focus after entering wrong password
Summary: Password field loses focus after entering wrong password
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Vaults widget (other bugs)
Version First Reported In: 6.0.0
Platform: Other Linux
: NOR minor
Target Milestone: 1.0
Assignee: Ivan Čukić
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2021-03-05 09:39 UTC by lesto
Modified: 2025-03-14 16:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description lesto 2021-03-05 09:39:39 UTC
SUMMARY
The password field focuses focus after inserting a wrong password

STEPS TO REPRODUCE
1. insert a wrong password
2. press enter
3. try to write the password again, the password field remain blank

OBSERVED RESULT
password filed has no focus

EXPECTED RESULT
password field has focus and i don't have to use tab/mouse to select it again
Comment 1 Bug Janitor Service 2025-03-13 04:28:40 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-vault/-/merge_requests/58
Comment 2 Nate Graham 2025-03-14 16:32:10 UTC
Git commit 9b0545a7e475bd261171d646c26919e91a5e6986 by Nate Graham.
Committed on 14/03/2025 at 16:30.
Pushed by ngraham into branch 'master'.

kded: restore focus on password field after wrong password

Pressing return or enter causes it to lose focus, so we need to manually
restore it in this case so the user can try the password again.
FIXED-IN: 6.3.4

M  +1    -0    kded/ui/mountdialog.cpp

https://invent.kde.org/plasma/plasma-vault/-/commit/9b0545a7e475bd261171d646c26919e91a5e6986
Comment 3 Nate Graham 2025-03-14 16:38:46 UTC
Git commit af8a9ceb9f2bfc98562ad020af1467ad064cdb4e by Nate Graham.
Committed on 14/03/2025 at 16:34.
Pushed by ngraham into branch 'Plasma/6.3'.

kded: restore focus on password field after wrong password

Pressing return or enter causes it to lose focus, so we need to manually
restore it in this case so the user can try the password again.
FIXED-IN: 6.3.4


(cherry picked from commit 9b0545a7e475bd261171d646c26919e91a5e6986)

Co-authored-by: Nate Graham <nate@kde.org>

M  +1    -0    kded/ui/mountdialog.cpp

https://invent.kde.org/plasma/plasma-vault/-/commit/af8a9ceb9f2bfc98562ad020af1467ad064cdb4e