kded: restore focus on password field after wrong password

Pressing return or enter causes it to lose focus, so we need to manually
restore it in this case so the user can try the password again.

BUG: 433994
FIXED-IN: 6.3.4


(cherry picked from commit 9b0545a7e475bd261171d646c26919e91a5e6986)

Co-authored-by: Nate Graham <nate@kde.org>